--- a/portfolio.html
+++ b/portfolio.html
@@ -53,8 +53,9 @@
                 Whether it's designing responsive layouts, enhancing user interactivity, or optimizing performance, I'm dedicated to creating web solutions that make an impact. Let's bring your ideas to life!
             </p>
             <div class="button-container">
-                <button class="btn1">Browse PROJECTS</button>
-                <button class="btn1">Browse WEBSITES</button>
+                <a href="projects.html" class="btn1">Browse PROJECTS</a>
+                <a href="websites.html" class="btn1">Browse WEBSITES</a>
+
             </div>
             
         </div>
