--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </p>
             <button class="btn3">Get Started</button>
         </div>
-        <img src="images/placeholder-circle.png">
+        <img src="images/ted.jpg">
         </div>
     </header>
 
@@ -224,26 +224,7 @@
                 <a href="#"><i class="ri-instagram-line"></i></a>
                 <a href="#"><i class="ri-twitter-line"></i></a>
             </div>
-        </div>
-        <div class="column">
-            <h4>Company</h4>
-            <a href="#">Business</a>
-            <a href="#">Partnership</a>
-            <a href="#">Network</a>
-        </div>
-        <div class="column">
-            <h4>About Us</h4>
-            <a href="#">Blogs</a>
-            <a href="#">Channels</a>
-            <a href="#">Sponsors</a>
-        </div>
-        <div class="column">
-            <h4>Contact</h4>
-            <a href="#">Contact Us</a>
-            <a href="#">Privicy Policy</a>
-            <a href="#">Terms & Conditions</a>
-        </div>
-    </footer>
+        </footer>
 
     <div class="copyright">
         Copyright © 2024 Faded. All Rights Reserved.
