Huge updates to navigation

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.5.0/remixicon.min.css">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="nav.css">
     <title>Portfolio</title>
 </head>
 
@@ -43,7 +44,7 @@
             <p>
                 Whether it's designing responsive layouts, enhancing user interactivity, or optimizing performance, I'm dedicated to creating web solutions that make an impact. Let's bring your ideas to life!
             </p>
-            <button class="btn3">Get Started</button>
+            <button class="btn3" onclick="window.location.href='contact.html'">GET STARTED</button>
         </div>
         <img src="images/ted.jpg">
         </div>
