--- a/projects.html
+++ b/projects.html
@@ -6,6 +6,7 @@
     <title>Browse Projects</title>
     <link rel="stylesheet" href="projects.css">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="nav.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.5.0/remixicon.min.css">
 </head>
 <body>
@@ -14,11 +15,6 @@
         
         <ul class="nav-links">
             <li class="link"><a href="index.html">Home</a></li>
-            <li class="link"><a href="features.html">Features</a></li>
-            <li class="link"><a href="pricing.html">Pricing</a></li>
-            <li class="link"><a href="portfolio.html">Portfolio</a></li>
-            
-            <li class="link"><a href="contact.html">Contact</a></li>
         </ul>
         <a href="contact.html">
             <button class="btn1">Hire Me</button>
