--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </div>
             <div class="card">
                 <span><i class="ri-bug-line"></i></span>
-                <h4>Code Debugging and Troubleshooting:</h4>
+                <h4>Code Debugging:</h4>
                 <p>
                     Expert at identifying and fixing bugs, providing reliable and fast solutions to keep projects running smoothly.
                 </p>
