--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
 
         <ul class="nav-links">
-            <li class="link"><a href="index.html">Home</a></li>
+            <li class="link"><a href="/">Home</a></li>
             <li id="link1" class="link"><a href="#">Features</a></li>
             <li id="link2" class="link"><a href="#">Pricing</a></li>
             <li id="link3" class="link"><a href="portfolio.html">Portfolio</a></li>
@@ -46,7 +46,7 @@
             </p>
             <button class="btn3" onclick="window.location.href='contact.html'">GET STARTED</button>
         </div>
-        <img src="images/ted.jpg">
+        <img src="/codeistry.co.uk/images/ted.jpg">
         </div>
     </header>
 
