--- a/projects.html
+++ b/projects.html
@@ -14,7 +14,7 @@
     <nav>
         
         <ul class="nav-links">
-            <li class="link"><a href="index.html">Home</a></li>
+            <li class="link"><a href="codeistry.co.uk">Home</a></li>
         </ul>
         <a href="contact.html">
             <button class="btn1">Hire Me</button>
