--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
         </div>
 
         <ul class="nav-links">
-            <li class="link"><a href="index.html">Home</a></li>
+            <li class="link"><a href="codeistry.co.uk">Home</a></li>
             <li id="link3" class="link"><a href="portfolio.html">Portfolio</a></li>
         </ul>
         <a href="contact.html">
