--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </p>
             <button class="btn3" onclick="window.location.href='contact.html'">GET STARTED</button>
         </div>
-        <img src="images/ted.jpg">
+        <img src="/codeistry.co.uk/images/ted.jpg">
         </div>
     </header>
 
