--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.5.0/remixicon.min.css">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="nav.css">
+    <link rel="stylesheet" href="/codeistry.co.uk/styles.css">
+
     <title>Portfolio</title>
 </head>
 
@@ -23,9 +23,9 @@
             <li class="link"><a href="/">Home</a></li>
             <li id="link1" class="link"><a href="#">Features</a></li>
             <li id="link2" class="link"><a href="#">Pricing</a></li>
-            <li id="link3" class="link"><a href="portfolio.html">Portfolio</a></li>
+            <li id="link3" class="link"><a href="/portfolio/">Portfolio</a></li>
         </ul>
-        <a href="contact.html">
+        <a href="/contact/">
             <button class="btn1">Hire Me</button>
           </a>
           
@@ -46,7 +46,7 @@
             </p>
             <button class="btn3" onclick="window.location.href='contact.html'">GET STARTED</button>
         </div>
-        <img src="/images/ted.jpg">
+        <img src="/codeistry.co.uk/images/ted.jpg">
         </div>
     </header>
 
@@ -232,7 +232,7 @@
     </div>
 
 
-    <script src="script.js"></script>
+    <script src="/codeistry.co.uk/script.js"></script>
 </body>
 
 </html>
