--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -22,10 +22,10 @@
         </div>
 
         <ul class="nav-links">
-            <li class="link"><a href="/">Home</a></li>
-            <li id="link3" class="link"><a href="portfolio.html">Portfolio</a></li>
+            <li class="link"><a href="/codeistry.co.uk/">Home</a></li>
+            <li id="link3" class="link"><a href="/portfolio/">Portfolio</a></li>
         </ul>
-        <a href="/contact">
+        <a href="/contact/">
             <button class="btn1">Hire Me</button>
           </a>
     </nav>
