--- a/projects/index.html
+++ b/projects/index.html
@@ -14,9 +14,9 @@
     <nav>
         
         <ul class="nav-links">
-            <li class="link"><a href="/">Home</a></li>
+            <li class="link"><a href="/codeistry.co.uk/">Home</a></li>
         </ul>
-        <a href="/contact">
+        <a href="/contact/">
             <button class="btn1">Hire Me</button>
         </a>
     </nav>
