--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </p>
             <button class="btn3" onclick="window.location.href='contact.html'">GET STARTED</button>
         </div>
-        <img src="/codeistry.co.uk/images/ted.jpg">
+        <img src="images/ted.jpg">
         </div>
     </header>
 
@@ -232,7 +232,7 @@
     </div>
 
 
-    <script src="/codeistry.co.uk/script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
