--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
 
         <ul class="nav-links">
-            <li class="link"><a href="/codeistry.co.uk/">Home</a></li>
+            <li class="link"><a href="/index.html">Home</a></li>
             <li id="link1" class="link"><a href="#">Features</a></li>
             <li id="link2" class="link"><a href="#">Pricing</a></li>
             <li id="link3" class="link"><a href="/portfolio/">Portfolio</a></li>
