--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.5.0/remixicon.min.css">
-    <link rel="stylesheet" href="/codeistry.co.uk/styles.css">
-    <link rel="stylesheet" href="/codeistry.co.uk/portfolio.css">
-    <script src="/codeistry.co.uk/portfolio.js"></script>
+    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="/portfolio.css">
+    <script src="/portfolio.js"></script>
     <title>Portfolio</title>
     
 </head>
@@ -22,7 +22,7 @@
         </div>
 
         <ul class="nav-links">
-            <li class="link"><a href="/codeistry.co.uk/">Home</a></li>
+            <li class="link"><a href="/index.html">Home</a></li>
             <li id="link3" class="link"><a href="/portfolio/">Portfolio</a></li>
         </ul>
         <a href="/contact/">
