--- a/projects/index.html
+++ b/projects/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Browse Projects</title>
-    <link rel="stylesheet" href="/codeistry.co.uk/projects.css">
-    <link rel="stylesheet" href="/codeistry.co.uk/styles.css">
+    <link rel="stylesheet" href="/projects.css">
+    <link rel="stylesheet" href="/styles.css">
     <link rel="stylesheet" href="nav.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.5.0/remixicon.min.css">
 </head>
@@ -14,7 +14,7 @@
     <nav>
         
         <ul class="nav-links">
-            <li class="link"><a href="/codeistry.co.uk/">Home</a></li>
+            <li class="link"><a href="/index.html">Home</a></li>
         </ul>
         <a href="/contact/">
             <button class="btn1">Hire Me</button>
