--- a/contact/index.html
+++ b/contact/index.html
@@ -17,7 +17,7 @@
             margin-left: 45px; /* Shift form to the right */
         }
 
-        /* Update the nav styles to keep the spacing compact */
+        /* Update the nav styles to keep the spacing compactf */
         nav {
             margin-bottom: 0; /* Remove bottom margin to bring elements closer */
             padding-bottom: 10px; /* Reduce the bottom padding */
