--- a/contact/index.html
+++ b/contact/index.html
@@ -40,7 +40,7 @@
         </div>
 
         <ul class="nav-links">
-            <li class="link"><a href="/index.html">Home</a></li>
+            <li class="link"><a href="/">Home</a></li>
             <li id="link3" class="link"><a href="/portfolio">Portfolio</a></li>
         </ul>
         <a href="/contact">
