--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -22,7 +22,7 @@
         </div>
 
         <ul class="nav-links">
-            <li class="link"><a href="/index.html">Home</a></li>
+            <li class="link"><a href="/">Home</a></li>
             <li id="link3" class="link"><a href="/portfolio/">Portfolio</a></li>
         </ul>
         <a href="/contact/">
@@ -51,7 +51,7 @@
                 Whether it's designing responsive layouts, enhancing user interactivity, or optimizing performance, I'm dedicated to creating web solutions that make an impact. Let's bring your ideas to life!
             </p>
             <div class="button-container">
-                <a href="projects.html" class="btn1">Browse PROJECTS</a>
+                <a href="" class="btn1">Browse PROJECTS</a>
                 
             </div>
             
