--- a/projects/index.html
+++ b/projects/index.html
@@ -14,7 +14,7 @@
     <nav>
         
         <ul class="nav-links">
-            <li class="link"><a href="/index.html">Home</a></li>
+            <li class="link"><a href="/">Home</a></li>
         </ul>
         <a href="/contact/">
             <button class="btn1">Hire Me</button>
