--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -51,7 +51,7 @@
                 Whether it's designing responsive layouts, enhancing user interactivity, or optimizing performance, I'm dedicated to creating web solutions that make an impact. Let's bring your ideas to life!
             </p>
             <div class="button-container">
-                <a href="" class="btn1">Browse PROJECTS</a>
+                <a href="/projects/" class="btn1">Browse PROJECTS</a>
                 
             </div>
             
