--- a/projects/index.html
+++ b/projects/index.html
@@ -32,7 +32,7 @@
         <div class="project-cards">
             <!-- Project 1 -->
             <div class="card project-card">
-                <img src="/codeistry.co.uk/images/Colour Cloud.png" alt="Project 1 Screenshot">
+                <img src="/images/Colour Cloud.png" alt="Project 1 Screenshot">
                 <div class="card-content">
                     <h3>Colour Cloud</h3>
                     <p>An interactive button designed using HTML, CSS, and JavaScript. </p>
@@ -42,7 +42,7 @@
 
             <!-- Project 2 -->
             <div class="card project-card">
-                <img src="/codeistry.co.uk/images/weatherchecker.png" alt="Project 2 Screenshot">
+                <img src="/images/weatherchecker.png" alt="Project 2 Screenshot">
                 <div class="card-content">
                     <h3>Weather Checker</h3>
                     <p>An application that uses OpenWeather API to display current weather conditions.</p>
