--- a/contact/index.html
+++ b/contact/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="/styles.css">
     <link rel="stylesheet" href="/portfolio.css">
     <script src="/portfolio.js"></script>
-    <title>Portfolio</title>
+    <link rel="icon" href="images/favicon.png" type="image/png">
+    <title>Contact</title>
 
     <style>
         /* Adjust the margin of the form to bring it closer to the nav */
