--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.5.0/remixicon.min.css">
     <link rel="stylesheet" href="/styles.css">
     <link rel="stylesheet" href="/portfolio.css">
+    <link rel="icon" href="images/favicon.png" type="image/png">
     <script src="/portfolio.js"></script>
     <title>Portfolio</title>
     
