--- a/projects/index.html
+++ b/projects/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Browse Projects</title>
+    <title>Projects</title>
     <link rel="stylesheet" href="/projects.css">
     <link rel="stylesheet" href="/styles.css">
     <link rel="stylesheet" href="nav.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.5.0/remixicon.min.css">
+    <link rel="icon" href="images/favicon.png" type="image/png">
 </head>
 <body>
     <!-- Navigation Bar -->
