--- a/contact/index.html
+++ b/contact/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/styles.css">
     <link rel="stylesheet" href="/portfolio.css">
     <script src="/portfolio.js"></script>
-    <link rel="icon" href="images/favicon.png" type="image/png">
+    <link rel="icon" href="/images/favicon.png" type="image/png">
     <title>Contact</title>
 
     <style>
