--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <p>
                 Whether it's designing responsive layouts, enhancing user interactivity, or optimizing performance, I'm dedicated to creating web solutions that make an impact. Let's bring your ideas to life!
             </p>
-            <button class="btn3" onclick="window.location.href='contact.html'">GET STARTED</button>
+            <button class="btn3" onclick="window.location.href='/contact/'">GET STARTED</button>
         </div>
         <img src="images/ted.jpg">
         </div>
@@ -124,7 +124,7 @@
                     
                     
                 </div>
-                <button class="btn" onclick="window.location.href='contact.html'">PURCHASE</button>
+                <button class="btn" onclick="window.location.href='/contact/'">PURCHASE</button>
             </div>
             <div class="card">
                 <div class="content">
@@ -163,7 +163,7 @@
                         Google Maps Integration + more
                     </p>
                 </div>
-                <button class="btn" onclick="window.location.href='contact.html'">PURCHASE</button>
+                <button class="btn" onclick="window.location.href='/contact/'">PURCHASE</button>
             </div>
             <div class="card">
                 <div class="content">
