Fixed purchase buttons at bottom

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                         Basic CRM Setup
                     </p>
                 </div>
-                <button class="btn" onclick="window.location.href='contact.html'">PURCHASE</button>
+                <button class="btn" onclick="window.location.href='/contact/'">PURCHASE</button>
             </div>
         </div>
     </section>
