--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.5.0/remixicon.min.css">
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="images/favicon.png" type="image/png">
-
-    <title>Home</title>
+ 
+    <title>Hire Me - Professional Web Development Services</title>
+  <meta name="description" content="I’m Josh, a professional web developer specializing in creating responsive layouts, enhancing user interactivity, and optimizing performance. Contact me to create impactful web solutions." />
 </head>
 
 <body>
