--- a/404.html
+++ b/404.html
@@ -123,7 +123,7 @@
 
             
         
-            <button class="btn" onclick="window.location.href='/contact/'">return home</button>
+            <button class="btn" onclick="window.location.href='/'">return home</button>
         </div>
         </div>
     </header>
