--- a/projects/index.html
+++ b/projects/index.html
@@ -37,7 +37,7 @@
                 <div class="card-content">
                     <h3>Colour Cloud</h3>
                     <p>An interactive button designed using HTML, CSS, and JavaScript. </p>
-                    <a href="https://xfadedx.github.io/colourcloud/" target="_blank" class="btn">click to View</a>
+                    <a href="/Colour Cloud/" target="_blank" class="btn">click to View</a>
                 </div>
             </div>
 
@@ -47,7 +47,7 @@
                 <div class="card-content">
                     <h3>Weather Checker</h3>
                     <p>An application that uses OpenWeather API to display current weather conditions.</p>
-                    <a href="https://xfadedx.github.io/weather/" target="_blank" class="btn">click to VIEW</a>
+                    <a href="/Weather Checker/" target="_blank" class="btn">click to VIEW</a>
                 </div>
             </div>
             
