--- a/projects/index.html
+++ b/projects/index.html
@@ -11,7 +11,7 @@
     <link rel="icon" href="/images/favicon.png" type="image/png">
 </head>
 <body>
-    <!-- Navigation Bar -->
+    <!-- Navigation Bars -->
     <nav>
         
         <ul class="nav-links">
