--- a/projects/index.html
+++ b/projects/index.html
@@ -11,7 +11,7 @@
     <link rel="icon" href="/images/favicon.png" type="image/png">
 </head>
 <body>
-    <!-- Navigation Bars -->
+    <!-- Navigation Bar -->
     <nav>
         
         <ul class="nav-links">
@@ -37,7 +37,7 @@
                 <div class="card-content">
                     <h3>Colour Cloud</h3>
                     <p>An interactive button designed using HTML, CSS, and JavaScript. </p>
-                    <a href="/Colour Cloud/" target="_blank" class="btn">click to View</a>
+                    <a href="/ColourCloud/" target="_blank" class="btn">click to View</a>
                 </div>
             </div>
 
@@ -47,7 +47,7 @@
                 <div class="card-content">
                     <h3>Weather Checker</h3>
                     <p>An application that uses OpenWeather API to display current weather conditions.</p>
-                    <a href="/Weather Checker/" target="_blank" class="btn">click to VIEW</a>
+                    <a href="/WeatherChecker/" target="_blank" class="btn">click to VIEW</a>
                 </div>
             </div>
             
