--- a/ColourCloud/index.html
+++ b/ColourCloud/index.html
@@ -3,6 +3,7 @@
 <head>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+    <link rel="icon" href="/images/favicon-cloud.png" type="image/png">
 </head>
 
 <body>
