--- a/WeatherChecker/index.html
+++ b/WeatherChecker/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Weather App</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="icon" href="/images/favicon-thunder.png" type="image/png">
 </head>
 <body>
     <div class="container">
