--- a/ColourCloud/index.html
+++ b/ColourCloud/index.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
     <link rel="icon" href="/images/favicon-cloud.png" type="image/png">
+    <title>Colour Cloud</title>
 </head>
 
 <body>
