--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.5.0/remixicon.min.css">
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="images/favicon.png" type="image/png">
- 
-    <title>Hire Me - Professional Web Development Services</title>
-  <meta name="description" content="I’m Josh, a professional web developer specializing in creating responsive layouts, enhancing user interactivity, and optimizing performance. Contact me to create impactful web solutions." />
+    <link rel="icon" href="/favicon.png" type="image/png">
+
+    <title>Home</title>
 </head>
 
 <body>
@@ -207,7 +206,7 @@
                         Basic CRM Setup
                     </p>
                 </div>
-                <button class="btn" onclick="window.location.href='/contact/'">PURCHASE</button>
+                <button class="btn" onclick="window.location.href='contact.html'">PURCHASE</button>
             </div>
         </div>
     </section>
