--- a/projects/index.html
+++ b/projects/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/styles.css">
     <link rel="stylesheet" href="nav.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.5.0/remixicon.min.css">
-    <link rel="icon" href="/images/favicon.png" type="image/png">
+    <link rel="icon" href="/favicon.png" type="image/png">
 </head>
 <body>
     <!-- Navigation Bar -->
