--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Codeistry offers cheap professional web development services, including custom site design, debugging, E-commerce, SEO optimization and more with tailored pricing plans!">
+    <meta name="description" content="Codeistry offers affordable professional web development services, including custom site design, debugging, E-commerce, SEO optimization and more with tailored pricing plans!">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.5.0/remixicon.min.css">
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="favicon.png" type="image/png">
