--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
         </footer>
 
     <div class="copyright">
-        Copyright © 2024 Faded. All Rights Reserved.
+        Copyright © 2024 Codeistry. All Rights Reserved.
     </div>
 
 
