--- a/contact/index.html
+++ b/contact/index.html
@@ -40,6 +40,12 @@
             </a>
         </div>
 
+        <div class="burger-menu" onclick="toggleMenu()">
+            <div class="line"></div>
+            <div class="line"></div>
+            <div class="line"></div>
+        </div>
+        
         <ul class="nav-links">
             <li class="link"><a href="/">Home</a></li>
             <li id="link3" class="link"><a href="/portfolio">Portfolio</a></li>
