--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -21,6 +21,12 @@
                 <img src="">
             </a>
         </div>
+        
+        <div class="burger-menu" onclick="toggleMenu()">
+            <div class="line"></div>
+            <div class="line"></div>
+            <div class="line"></div>
+        </div>
 
         <ul class="nav-links">
             <li class="link"><a href="/">Home</a></li>
