--- a/projects/index.html
+++ b/projects/index.html
@@ -17,6 +17,13 @@
         <ul class="nav-links">
             <li class="link"><a href="/">Home</a></li>
         </ul>
+
+        <div class="burger-menu" onclick="toggleMenu()">
+            <div class="line"></div>
+            <div class="line"></div>
+            <div class="line"></div>
+        </div>
+
         <a href="/contact/">
             <button class="btn1">Hire Me</button>
         </a>
