--- a/contact/index.html
+++ b/contact/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/portfolio.css">
     <script src="/portfolio.js"></script>
     <link rel="icon" href="/favicon.png" type="image/png">
+    <script src="/script.js"></script>
     <title>Contact</title>
 
     <style>
@@ -45,7 +46,7 @@
             <div class="line"></div>
             <div class="line"></div>
         </div>
-        
+
         <ul class="nav-links">
             <li class="link"><a href="/">Home</a></li>
             <li id="link3" class="link"><a href="/portfolio">Portfolio</a></li>
