--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/portfolio.css">
     <link rel="icon" href="/favicon.png" type="image/png">
     <script src="/portfolio.js"></script>
+    <script src="/script.js"></script>
     <title>Portfolio</title>
     
 </head>
@@ -21,7 +22,7 @@
                 <img src="">
             </a>
         </div>
-        
+
         <div class="burger-menu" onclick="toggleMenu()">
             <div class="line"></div>
             <div class="line"></div>
