--- a/contact/index.html
+++ b/contact/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="/styles.css">
     <link rel="stylesheet" href="/portfolio.css">
     <script src="/portfolio.js"></script>
-    <link rel="icon" href="/favicon.png" type="image/png">
     <script src="/script.js"></script>
+    <link rel="icon" href="/favicon.png" type="image/png">
     <title>Contact</title>
 
     <style>
@@ -64,6 +64,12 @@
         Copyright © 2024 Josh. All Rights Reserved.
     </div>
 
+    <script>
+        function toggleMenu() {
+    var body = document.body; // Target the body element
+    body.classList.toggle("burger-active"); // Toggle the burger-active class
+}
+    </script>
 </body>
 
 
