--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -68,15 +68,18 @@
         </div>
     </header>
 
-    
      
-
-   
-
     <div class="copyright">
         Copyright © 2024 Josh. All Rights Reserved.
     </div>
 
+
+    <script>
+        function toggleMenu() {
+    var body = document.body; // Target the body element
+    body.classList.toggle("burger-active"); // Toggle the burger-active class
+}
+    </script>
 </body>
 
 </html>
