--- a/projects/index.html
+++ b/projects/index.html
@@ -62,4 +62,11 @@
             <!-- Add more project cards as needed -->
         </div>
     </section>
+    <script>
+        function toggleMenu() {
+    var body = document.body; // Target the body element
+    body.classList.toggle("burger-active"); // Toggle the burger-active class
+}
+    </script>
+</body>
 
