--- a/index.html
+++ b/index.html
@@ -29,8 +29,6 @@
 
         <ul class="nav-links">
             <li class="link"><a href="/">Home</a></li>
-            <li id="link1" class="link"><a href="#">Features</a></li>
-            <li id="link2" class="link"><a href="#">Pricing</a></li>
             <li id="link3" class="link"><a href="/portfolio/">Portfolio</a></li>
         </ul>
         <a href="/contact/">
@@ -54,7 +52,7 @@
             </p>
             <button class="btn3" onclick="window.location.href='/contact/'">GET STARTED</button>
         </div>
-        <img src="images/ted.jpg">
+        <img src="images/ted.jpg" class="responsive-image">
         </div>
     </header>
 
@@ -228,11 +226,10 @@
             <p>
                 
             </p>
-            <div class="socials">
-                <a href="#"><i class="ri-youtube-line"></i></a>
-                <a href="#"><i class="ri-instagram-line"></i></a>
-                <a href="#"><i class="ri-twitter-line"></i></a>
+            <div class="socials" style="display: flex; justify-content: center;margin-left: 530px;">
+                <a href="https://www.linkedin.com/in/josh-myall-964bab288/"><i class="ri-linkedin-line"></i></a>
             </div>
+            
         </footer>
 
     <div class="copyright">
